# cv_demo

./: .gitignore  README.md  config.py  cv_demo.ipynb  cv_demo.py  hello.py  pyproject.toml
src/: config.py  cv_demo.py  data.py  loss_function.py  model.py  optimizer.py  pipeline.py
