[project]
name = "cv_demo"
version = "0.1.0"
description = "A computer vision pytorch demo project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "ruff>=0.6.3",
    "tensorboard>=2.17.1",
    "torch-tb-profiler>=0.4.3",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.0%2Bcu124-cp312-cp312-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu124/torchvision-0.19.0%2Bcu124-cp312-cp312-linux_x86_64.whl" }
